5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1832_3179.log
== TEST (2019-06-13 18:07:17) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=0
i=0
i=o=i+1
for v in import(posiçao do vetor)
zeros=zeros(n, dtype=int)
print(i)
-- ERROR:
File "XXXX", line 6
    for v in import(posiçao do vetor)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:07:26) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=0
i=0
i=o=i+1
zeros=zeros(n, dtype=int)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:07:55) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=0
i=0
i=o=i+1
zeros=zeros(n, dtype=int)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:20:07) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=0
i=0
i=i+1
zeros=zeros(n, dtype=int)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:20:17) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=0
i=0
i=i+1
zeros=zeros(n, dtype=int)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:20:42) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=0
i=0
i=i+1
zeros=zeros(n, dtype=int)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:31) 
-- CODE:
from numpy import *
v=array(eval(int(input("digite o vetor: "))))
n=0
i=0
i=i+1
zeros=zeros(n, dtype=int)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:45) 
-- CODE:
from numpy import *
v=array(eval(int(input("digite o vetor: "))))
n=0
i=0
i=i+1
zeros=zeros(n, dtype=int)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
